deploy/manifests/datapusher_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datapusher
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datapusher
  template:
    metadata:
      labels:
        app: datapusher
    spec:
      containers:
      - name: datapusher
        image: ckan/ckan-base-datapusher:0.0.20 # ckan/datapusher:latest
        resources:
          requests:
            memory: "256Mi" # Adjust the memory request as needed
            cpu: "100m"    # Adjust the CPU request as needed (250m means 0.25 cores)
          limits:
            memory: "256Mi"  # Adjust the memory limit as needed
            cpu: "100m"    # Adjust the CPU limit as needed (500m means 0.5 cores)
