deploy/manifests/postgres_deployment.yaml
# ckan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: benmotevalli/ckan-postgres # ckan-docker-db:latest
        resources:
          requests:
            memory: "256Mi" # Adjust the memory request as needed
            cpu: "100m"    # Adjust the CPU request as needed (250m means 0.25 cores)
          limits:
            memory: "256Mi"  # Adjust the memory limit as needed
            cpu: "100m"    # Adjust the CPU limit as needed (500m means 0.5 cores)
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        # readinessProbe:
        #   httpGet:
        #     path: /api/3/action/status_show
        #     port: 5000
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 5
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
