deploy/manifests/redis_deployment.yaml
# redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6 # latest
        resources:
          requests:
            memory: "256Mi" # Adjust the memory request as needed
            cpu: "100m"    # Adjust the CPU request as needed (250m means 0.25 cores)
          limits:
            memory: "256Mi"  # Adjust the memory limit as needed
            cpu: "100m"    # Adjust the CPU limit as needed (500m means 0.5 cores)
      #   volumeMounts:
      #   - name: redis-storage
      #     mountPath: /data
      # volumes:
      # - name: redis-storage
      #   persistentVolumeClaim:
      #     claimName: redis-pvc
