deploy/manifests/datapusher_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: datapusher
  namespace: apps
spec:
  ports:
  - port: 8800
    targetPort: 8800
  selector:
    app: datapusher
