deploy/manifests/postgres_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: apps
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
