deploy/manifests/redis_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: apps
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
