deploy/manifests/solr_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr
  namespace: apps
spec:
  ports:
  - port: 8983
    targetPort: 8983
  selector:
    app: solr
