deploy/manifests/ingress_local.yaml
# ckan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ckan-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: micro-example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ckan
            port:
              number: 5000
